--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="./Imagenes/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Contact</title>
+    <link rel="stylesheet" href="./Css/style.css">
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -15,22 +16,158 @@
 
         <div class="d-flex justify-content-around align-items-center">
             <div class="container-fluid">
-                <img class="img-fluid" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
+                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
             </div>
 
-            <div class="container-fluid  ">
-                <nav class="nav nav-pills flex-column flex-sm-row">
-                    <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./upcomingEvents.html">UPCOMING EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./pastEvents.html">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link active" href="#">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./stats.html">STATS</a>
-                    
+            <div class="container-fluid d-none d-xl-inline">
+                <nav class="nav nav-pills  fs-5 ">
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page" href="#">HOME</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./upcomingEvents.html">UPCOMING
+                        EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./pastEvents.html">PAST EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link active me-2 ms-2" href="#">CONTACT</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./stats.html">STATS</a>
+
                 </nav>
+            </div>
+
+            <div class="d-flex justify-content-end align-items-center">
+
+                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent">
+                    <div class="bg-body-secondary fs-6">
+                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
+                            EVENTS</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./pastEvents.html">PAST EVENTS</a>
+                        <a class="nav-link bg-primary p-2 m-1  text-center rounded-pill" href="#">CONTACT</a>
+                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
+
+                    </div>
+                </div>
             </div>
         </div>
 
+
     </header>
+
+    <main>
+        <section>
+            <div id="carouselExampleAutoplaying" class="carousel slide border carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active div-container">
+                        <img src="./Imagenes/optional_banner_2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">CONTACT US</h1>
+                            <p class="fs-4">For more information leave your information</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_5.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">CONTACT US</h1>
+                            <p class="fs-4">For more information leave your information</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">CONTACT US</h1>
+                            <p class="fs-4">For more information leave your information</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">CONTACT US</h1>
+                            <p class="fs-4">For more information leave your information</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_4.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">CONTACT US</h1>
+                            <p class="fs-4">For more information leave your information</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <section class="d-flex justify-content-center">
+            <div class="w-50 mt-5 mb-5 fs-4 fw-bold">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Name:</label>
+                    <input type="text" class="form-control border-primary fs-5" id="exampleFormControlInput1"
+                        placeholder="Jeison Ramos">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput2" class="form-label">Email address:</label>
+                    <input type="email" class="form-control border-primary fs-5" id="exampleFormControlInput2"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
+                    <textarea class="form-control border-primary fs-5" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button class="btn btn-outline-primary search " type="submit">Submit</button>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer class="">
+        <div
+            class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
+            <div class="ms-5  justify-content-center">
+                <a class="ms-2" href="https://wa.link/x9mz02" target="_blank">
+                    <img class="img" src="./Imagenes/whatsapp.png" alt="Logo whatsapp">
+                </a>
+
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img class="img" src="./Imagenes/facebook.png" alt="Logo facebook">
+                </a>
+
+                <a href="https://www.instagram.com/?hl=es-la" target="_blank">
+                    <img class="img" src="./Imagenes/instagram.png" alt="Logo instagram">
+                </a>
+            </div>
+            <div>
+                <h6 class="p-2">
+                    Created by: Jeison Ramos
+                </h6>
+            </div>
+
+        </div>
+
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
