--- a/pastEvents.html
+++ b/pastEvents.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="./Imagenes/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Past Events</title>
+    <link rel="stylesheet" href="./Css/style.css">
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -15,22 +16,285 @@
 
         <div class="d-flex justify-content-around align-items-center">
             <div class="container-fluid">
-                <img class="img-fluid" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
+                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
             </div>
 
-            <div class="container-fluid  ">
-                <nav class="nav nav-pills flex-column flex-sm-row">
-                    <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./upcomingEvents.html">UPCOMING EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link active" href="#">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./contact.html">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./stats.html">STATS</a>
-                    
+            <div class="container-fluid d-none d-xl-inline">
+                <nav class="nav nav-pills  fs-5 ">
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page"
+                        href="./index.html">HOME</a>
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./upcomingEvents.html">UPCOMING
+                        EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link active me-2 ms-2" href="#">PAST EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./contact.html">CONTACT</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./stats.html">STATS</a>
+
                 </nav>
+            </div>
+
+            <div class="d-flex justify-content-end align-items-center">
+
+                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent">
+                    <div class="bg-body-secondary fs-6">
+                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
+                            EVENTS</a>
+                        <a class="nav-link bg-primary p-2 m-1  text-center rounded-pill" href="#">PAST EVENTS</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./contact.html">CONTACT</a>
+                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
+
+                    </div>
+                </div>
             </div>
         </div>
 
+
     </header>
+
+    <main>
+        <section>
+            <div id="carouselExampleAutoplaying" class="carousel slide border carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active div-container">
+                        <img src="./Imagenes/optional_banner_2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">PAST EVENTS</h1>
+                            <p class="fs-4">In this section you will find all your past events</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_5.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">PAST EVENTS</h1>
+                            <p class="fs-4">In this section you will find all your past events</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">PAST EVENTS</h1>
+                            <p class="fs-4">In this section you will find all your past events</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">PAST EVENTS</h1>
+                            <p class="fs-4">In this section you will find all your past events</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item div-container">
+                        <img src="./Imagenes/optional_banner_4.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption text-center bg-light text-black rounded-5"
+                            style="--bs-bg-opacity: .5;">
+                            <h1 class="display-1">PAST EVENTS</h1>
+                            <p class="fs-4">In this section you will find all your past events</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <section class="mb-5">
+            <div class="d-flex justify-content-around  align-items-center flex-wrap mt-5 ms-4">
+
+                <div class=" fs-5 mb-2">
+                    <div class="form-check form-check-inline ">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox1"
+                            value="foodFair">
+                        <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
+                    </div>
+                    <div class="form-check form-check-inline ">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox2"
+                            value="museun">
+                        <label class="form-check-label" for="inlineCheckbox2">Museum</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox3"
+                            value="costumeParty">
+                        <label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox4"
+                            value="musicConcert">
+                        <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox5"
+                            value="race">
+                        <label class="form-check-label" for="inlineCheckbox5">Race</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox6"
+                            value="bookExchange">
+                        <label class="form-check-label" for="inlineCheckbox6">Book Exchange</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input border border-primary " type="checkbox" id="inlineCheckbox7"
+                            value="goTheCinema">
+                        <label class="form-check-label" for="inlineCheckbox7">Let's go to the cinema</label>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-1 border border-primary" type="search" placeholder="Search"
+                                aria-label="Search">
+                            <button class="btn btn-outline-primary search " type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mt-4">
+            <div id="carouselExample" class="carousel slide container-fluid">
+                <div class="carousel-inner">
+                    <div class="carousel-item active ">
+                        <div class="row">
+                            <div class="col-sm-3 col-md-6 col-xxl-3">
+                                <div
+                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
+                                    <img src="./Imagenes/food_fair.jpg"
+                                        class="card-img-top  border border-black border-opacity-10 border-4 mb-3 "
+                                        alt="Festival the collectivities">
+                                    <div class="card-body">
+                                        <h5 class="card-title mb-3">Festival of the collectivities</h5>
+                                        <p class="card-text mb-4">Enjoy your favorite dishes from different countries in
+                                            a unique
+                                            event for the whole family.</p>
+                                        <div class="d-flex justify-content-around align-items-center  pt-3 ">
+                                            <h5 class="d-inline-block ">Price: 5</h5>
+                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-md-6 col-xxl-3">
+                                <div
+                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
+                                    <img src="./Imagenes/outing_to_the_museum.jpg"
+                                        class="card-img-top border border-black border-opacity-10 border-4"
+                                        alt="Art Exhibition">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Art Exhibition</h5>
+                                        <p class="card-text">Let's go to the art museum for an incredible tour to
+                                            learn
+                                            about the largest dinosaurs.</p>
+                                        <div class="d-flex justify-content-around align-items-center pt-3 ">
+                                            <h5 class="d-inline-block ">Price: 15</h5>
+                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-md-6 col-xxl-3">
+                                <div
+                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
+                                    <img src="./Imagenes/costume_party.jpg"
+                                        class="card-img-top border border-black border-opacity-10 border-4"
+                                        alt="Hallowen Night">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Halloween Night</h5>
+                                        <p class="card-text">Come in your scariest costume character to win amazing
+                                            prizes.
+                                        </p>
+                                        <div class="d-flex justify-content-around align-items-center pt-3">
+                                            <h5 class="d-inline-block ">Price: 12</h5>
+                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-md-6 col-xxl-3">
+                                <div
+                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
+                                    <img src="./Imagenes/music_concert.jpg"
+                                        class=" border border-black border-opacity-10 border-4" alt="Mettalica">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Metallica in concert</h5>
+                                        <p class="card-text">The only concert of the most emblematic band in the
+                                            world.</p>
+                                        <div class="d-flex justify-content-evenly align-items-center pt-3">
+                                            <h5 class="d-inline-block ">Price: 150</h5>
+                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div> -->
+
+                </div>
+                <button class="carousel-control-prev w-5" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next w-5" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="">
+        <div class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
+            <div class="ms-5  justify-content-center">
+                <a  class="ms-2" href="https://wa.link/x9mz02" target="_blank">
+                    <img class="img" src="./Imagenes/whatsapp.png" alt="Logo whatsapp">
+                </a>
+
+                <a  href="https://www.facebook.com/" target="_blank">
+                    <img class="img" src="./Imagenes/facebook.png" alt="Logo facebook">
+                </a>
+
+                <a  href="https://www.instagram.com/?hl=es-la" target="_blank">
+                    <img class="img" src="./Imagenes/instagram.png" alt="Logo instagram">
+                </a>
+            </div>
+            <div>
+                <h6 class="p-2">
+                    Created by: Jeison Ramos
+                </h6>
+            </div>
+
+        </div>
+
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
