--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
             <div class="container-fluid d-none d-xl-inline">
                 <nav class="nav nav-pills  fs-5 ">
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page" href="#">HOME</a>
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page" href="./index.html">HOME</a>
                     <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./upcomingEvents.html">UPCOMING
                         EVENTS</a>
                     <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./pastEvents.html">PAST EVENTS</a>
@@ -118,15 +118,15 @@
         </section>
 
         <section class="d-flex justify-content-center">
-            <div class="w-50 mt-5 mb-5 fs-4 fw-bold">
+            <div class="w-50 mt-5 mb-5 fs-5 fw-bold">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Name:</label>
-                    <input type="text" class="form-control border-primary fs-5" id="exampleFormControlInput1"
+                    <input type="text" class="form-control border-primary fs-6" id="exampleFormControlInput1"
                         placeholder="Jeison Ramos">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput2" class="form-label">Email address:</label>
-                    <input type="email" class="form-control border-primary fs-5" id="exampleFormControlInput2"
+                    <input type="email" class="form-control border-primary fs-6" id="exampleFormControlInput2"
                         placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
