--- a/details.html
+++ b/details.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="./Imagenes/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Details</title>
+    <link rel="stylesheet" href="./Css/style.css">
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -15,22 +16,140 @@
 
         <div class="d-flex justify-content-around align-items-center">
             <div class="container-fluid">
-                <img class="img-fluid" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
+                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
             </div>
 
-            <div class="container-fluid  ">
-                <nav class="nav nav-pills flex-column flex-sm-row">
-                    <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./upcomingEvents.html">UPCOMING EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./pastEvents.html">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./contact.html">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="./stats.html">STATS</a>
-                    
+            <div class="container-fluid d-none d-xl-inline">
+                <nav class="nav nav-pills  fs-5 ">
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page"
+                        href="./index.html">HOME</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./upcomingEvents.html">UPCOMING
+                        EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./pastEvents.html">PAST EVENTS</a>
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./contact.html">CONTACT</a>
+                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./stats.html">STATS</a>
+
                 </nav>
+            </div>
+
+            <div class="d-flex justify-content-end align-items-center">
+
+                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent">
+                    <div class="bg-body-secondary fs-6">
+                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
+                            EVENTS</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./pastEvents.html">PAST EVENTS</a>
+                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./contact.html">CONTACT</a>
+                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
+
+                    </div>
+                </div>
             </div>
         </div>
 
+
     </header>
+
+    <main>
+
+        <div class="card mt-5 d-none d-xl-block">
+
+            <div class="row g-0 d-flex justify-content-center align-items-center ">
+                <div class="col-md-5 border ms-5 mt-5 mb-5">
+                    <img src="./Imagenes/food_fair.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-5 border border-primary border-4 ms-5 mt-5 mb-5 w-25 bg-light bg-gradient">
+                    <div class="card-body">
+                        <h5 class="card-title display-6 fw-bold">Festival of the collectivities</h5>
+                        <h5 class="card-title d-inline ">Date:</h5>
+                        <p class="card-text d-inline"> 2022-12-12</p> <br>
+
+                        <h5 class="card-title d-inline">Description:</h5>
+
+                        <p class="card-text d-inline">Enjoy your favorite dishes from different countries in a
+                            unique event for the whole family.</p> <br>
+                        <h5 class="card-title d-inline">Category:</h5>
+                        <p class="card-text d-inline"> Food Fair</p> <br>
+                        <h5 class="card-title d-inline">Place:</h5>
+                        <p class="card-text d-inline"> Room A</p> <br>
+                        <h5 class="card-title d-inline">Capacity:</h5>
+                        <p class="card-text d-inline"> 45000</p> <br>
+                        <h5 class="card-title d-inline">Assistance:</h5>
+                        <p class="card-text d-inline"> 42756</p> <br>
+                        <h5 class="card-title d-inline">Price:</h5>
+                        <p class="card-text d-inline"> $5</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <section>
+            <div class="d-flex justify-content-center align-items-center  d-sm d-xl-none  ">
+                <div class="card card-body col-6 m-5" style="width: 10rem;">
+                    <img src="./Imagenes/food_fair.jpg" class="card-img-top rounded-start " alt="Food Fair">
+                    <h5 class="card-title display-6 fw-bold">Festival of the collectivities</h5>
+                    <h5 class="card-title d-inline">Date:</h5>
+                    <p class="card-text d-inline"> 2022-12-12</p> <br>
+                    <h5 class="card-title d-inline">Description:</h5>
+
+                    <p class="card-text d-inline">Enjoy your favorite dishes from different countries in a unique
+                        event for the whole family.</p> <br>
+                    <h5 class="card-title d-inline">Category:</h5>
+                    <p class="card-text d-inline"> Food Fair</p> <br>
+                    <h5 class="card-title d-inline">Place:</h5>
+                    <p class="card-text d-inline"> Room A</p> <br>
+                    <h5 class="card-title d-inline">Capacity:</h5>
+                    <p class="card-text d-inline"> 45000</p> <br>
+                    <h5 class="card-title d-inline">Assistance:</h5>
+                    <p class="card-text d-inline"> 42756</p> <br>
+                    <h5 class="card-title d-inline">Price:</h5>
+                    <p class="card-text d-inline"> $5</p>
+                </div>
+
+            </div>
+
+
+        </section>
+    </main>
+
+    <footer class="mt-5">
+        <div
+            class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
+            <div class="ms-5  justify-content-center">
+                <a class="ms-2" href="https://wa.link/x9mz02" target="_blank">
+                    <img class="img" src="./Imagenes/whatsapp.png" alt="Logo whatsapp">
+                </a>
+
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img class="img" src="./Imagenes/facebook.png" alt="Logo facebook">
+                </a>
+
+                <a href="https://www.instagram.com/?hl=es-la" target="_blank">
+                    <img class="img" src="./Imagenes/instagram.png" alt="Logo instagram">
+                </a>
+            </div>
+            <div>
+                <h6 class="p-2">
+                    Created by: Jeison Ramos
+                </h6>
+            </div>
+
+        </div>
+
+
+    </foote>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
