Agregando detalles finales

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                             event for the whole family.</p>
                                         <div class="d-flex justify-content-around align-items-center  pt-3 ">
                                             <h5 class="d-inline-block ">Price: 5</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -226,7 +226,7 @@
                                             about the largest dinosaurs.</p>
                                         <div class="d-flex justify-content-around align-items-center pt-3 ">
                                             <h5 class="d-inline-block ">Price: 15</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search ">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -244,7 +244,7 @@
                                         </p>
                                         <div class="d-flex justify-content-around align-items-center pt-3">
                                             <h5 class="d-inline-block ">Price: 12</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -260,7 +260,7 @@
                                             world.</p>
                                         <div class="d-flex justify-content-evenly align-items-center pt-3">
                                             <h5 class="d-inline-block ">Price: 150</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
