--- a/pastEvents.html
+++ b/pastEvents.html
@@ -209,7 +209,7 @@
                                             event for the whole family.</p>
                                         <div class="d-flex justify-content-around align-items-center  pt-3 ">
                                             <h5 class="d-inline-block ">Price: 5</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@
                                             about the largest dinosaurs.</p>
                                         <div class="d-flex justify-content-around align-items-center pt-3 ">
                                             <h5 class="d-inline-block ">Price: 15</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@
                                         </p>
                                         <div class="d-flex justify-content-around align-items-center pt-3">
                                             <h5 class="d-inline-block ">Price: 12</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -261,7 +261,7 @@
                                             world.</p>
                                         <div class="d-flex justify-content-evenly align-items-center pt-3">
                                             <h5 class="d-inline-block ">Price: 150</h5>
-                                            <a href="./details.html" class="btn btn-primary ">Details</a>
+                                            <a href="./details.html" class="btn btn-primary search">Details</a>
                                         </div>
                                     </div>
                                 </div>
