Sprint1 Modulo dos finalizado, pasado por validador sin ningun cambio o correcion

--- a/stats.html
+++ b/stats.html
@@ -16,14 +16,13 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                    <img class="img-fluid logo  w-50" src="./Imagenes/amazing_brand.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
                     <div class="offcanvas-header">
                         <a class="navbar-brand" href="./index.html">
                             <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
@@ -44,6 +43,7 @@
                             href="#">STATS</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
     </header>
@@ -145,63 +145,63 @@
             </div>
         </section>
 
-        <section>
-            <div class="mt-5 ms-5 me-5 pb-5 table-responsive">
-                <table class="table table-bordered border-black table-hover">
-                    <tbody>
-                        <tr>
-                            <th class="bg-secondary" colspan="3">Events Statistics</th>
-                        </tr>
-                        <tr>
-                            <td class="col-4 ">Events with highest % of assistance</td>
-                            <td class="col-4">Events whit lowest % of assistance</td>
-                            <td class="col-4">Events whit larger capacity</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary" colspan="3">Upcoming events statistics by category</th>
-                        </tr>
-                        <tr>
-                            <td>Categories</td>
-                            <td>Revenues</td>
-                            <td>Percentage of assistance</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary" colspan="3">Past Events statistics by category</th>
-                        </tr>
-                        <tr>
-                            <td>Categories</td>
-                            <td>Revenues</td>
-                            <td>Percentage of assistance</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
+
+        <div class="mt-5 ms-5 me-5 pb-5 table-responsive">
+            <table class="table table-bordered border-black table-hover">
+                <tbody>
+                    <tr>
+                        <th class="bg-secondary" colspan="3">Events Statistics</th>
+                    </tr>
+                    <tr>
+                        <td class="col-4 ">Events with highest % of assistance</td>
+                        <td class="col-4">Events whit lowest % of assistance</td>
+                        <td class="col-4">Events whit larger capacity</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th class="bg-secondary" colspan="3">Upcoming events statistics by category</th>
+                    </tr>
+                    <tr>
+                        <td>Categories</td>
+                        <td>Revenues</td>
+                        <td>Percentage of assistance</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th class="bg-secondary" colspan="3">Past Events statistics by category</th>
+                    </tr>
+                    <tr>
+                        <td>Categories</td>
+                        <td>Revenues</td>
+                        <td>Percentage of assistance</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </main>
 
 
