--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,13 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                    <img class="img-fluid logo  w-50" src="./Imagenes/amazing_brand.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
                     <div class="offcanvas-header">
                         <a class="navbar-brand" href="./index.html">
                             <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
@@ -44,6 +43,7 @@
                             href="./stats.html">STATS</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
 
@@ -137,7 +137,7 @@
             </div>
         </section>
 
-        <section class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
             <div class="w-50 mt-5 mb-5 fs-5 fw-bold">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Name:</label>
@@ -159,7 +159,7 @@
                 </div>
             </div>
 
-        </section>
+        </div>
 
     </main>
 
