--- a/details.html
+++ b/details.html
@@ -17,14 +17,13 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                    <img class="img-fluid logo  w-50" src="./Imagenes/amazing_brand.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
                     <div class="offcanvas-header">
                         <a class="navbar-brand" href="./index.html">
                             <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
@@ -44,6 +43,7 @@
                             href="./stats.html">STATS</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
     </header>
