--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -17,14 +17,13 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                    <img class="img-fluid logo  w-50" src="./Imagenes/amazing_brand.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
                     <div class="offcanvas-header">
                         <a class="navbar-brand" href="./index.html">
                             <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
@@ -45,6 +44,7 @@
                             href="./stats.html">STATS</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
     </header>
@@ -137,7 +137,7 @@
             </div>
         </section>
 
-        <section class="mb-5">
+        <div class="mb-5">
             <div class="d-flex justify-content-around  align-items-center flex-wrap mt-5 ms-4">
 
                 <div class=" fs-5 mb-2">
@@ -188,104 +188,27 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="mt-4">
+        <div class="mt-4">
             <div id="carouselExample" class="carousel slide container-fluid">
-                <div class="carousel-inner">
-                    <div class="carousel-item active ">
-                        <div class="row">
-                            <div class="col-sm-3 col-md-6 col-xxl-3">
-                                <div
-                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
-                                    <img src="./Imagenes/food_fair.jpg"
-                                        class="card-img-top  border border-black border-opacity-10 border-4 mb-3 "
-                                        alt="Festival the collectivities">
-                                    <div class="card-body">
-                                        <h5 class="card-title mb-3">Festival of the collectivities</h5>
-                                        <p class="card-text mb-4">Enjoy your favorite dishes from different countries in
-                                            a unique
-                                            event for the whole family.</p>
-                                        <div class="d-flex justify-content-around align-items-center  pt-3 ">
-                                            <h5 class="d-inline-block ">Price: 5</h5>
-                                            <a href="./details.html" class="btn btn-primary search">Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-md-6 col-xxl-3">
-                                <div
-                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
-                                    <img src="./Imagenes/outing_to_the_museum.jpg"
-                                        class="card-img-top border border-black border-opacity-10 border-4"
-                                        alt="Art Exhibition">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Art Exhibition</h5>
-                                        <p class="card-text">Let's go to the art museum for an incredible tour to
-                                            learn
-                                            about the largest dinosaurs.</p>
-                                        <div class="d-flex justify-content-around align-items-center pt-3 ">
-                                            <h5 class="d-inline-block ">Price: 15</h5>
-                                            <a href="./details.html" class="btn btn-primary search ">Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-md-6 col-xxl-3">
-                                <div
-                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
-                                    <img src="./Imagenes/costume_party.jpg"
-                                        class="card-img-top border border-black border-opacity-10 border-4"
-                                        alt="Hallowen Night">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Halloween Night</h5>
-                                        <p class="card-text">Come in your scariest costume character to win amazing
-                                            prizes.
-                                        </p>
-                                        <div class="d-flex justify-content-around align-items-center pt-3">
-                                            <h5 class="d-inline-block ">Price: 12</h5>
-                                            <a href="./details.html" class="btn btn-primary search">Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-md-6 col-xxl-3">
-                                <div
-                                    class="card h-100 mt-1 ms-2 me-2 shadow-lg p-3 mb-5 bg-body-black rounded border  border-black border-opacity-10 border-4">
-                                    <img src="./Imagenes/music_concert.jpg"
-                                        class=" border border-black border-opacity-10 border-4" alt="Mettalica">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Metallica in concert</h5>
-                                        <p class="card-text">The only concert of the most emblematic band in the
-                                            world.</p>
-                                        <div class="d-flex justify-content-evenly align-items-center pt-3">
-                                            <h5 class="d-inline-block ">Price: 150</h5>
-                                            <a href="./details.html" class="btn btn-primary search">Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div id="carouselPrincipal" class="carousel-inner">
 
-                    </div>
-
-                    <!-- <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div> -->
 
                 </div>
+
                 <button class="carousel-control-prev w-5" type="button" data-bs-target="#carouselExample"
                     data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-prev-icon carru-cards" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next w-5" type="button" data-bs-target="#carouselExample"
                     data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon carru-cards" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </section>
+        </div>
 
     </main>
 
@@ -315,7 +238,7 @@
 
 
     </footer>
-
+    <script src="./javascript/UpComming.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
