--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     <div class="carousel-item active div-container">
                         <img src="./Imagenes/optional_banner_2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
-                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
-                                style="--bs-bg-opacity: .7;">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5 opacity-bg">
                                 <h1 class="display-1 fw-bold  fst-italic">HOME</h1>
                                 <p class="fs-6 d-xl-none fw-bold fst-italic">Welcome here you will find all your
                                     movements of past and future events</p>
@@ -70,8 +69,7 @@
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_5.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
-                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
-                                style="--bs-bg-opacity: .7;">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5 opacity-bg">
                                 <h1 class="display-1 fw-bold  fst-italic">HOME</h1>
                                 <p class="fs-6 d-xl-none fw-bold fst-italic">Welcome here you will find all your
                                     movements of past and future events</p>
@@ -84,8 +82,7 @@
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
-                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
-                                style="--bs-bg-opacity: .7;">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5 opacity-bg">
                                 <h1 class="display-1 fw-bold  fst-italic">HOME</h1>
                                 <p class="fs-6 d-xl-none fw-bold fst-italic">Welcome here you will find all your
                                     movements of past and future events</p>
@@ -98,8 +95,7 @@
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
-                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
-                                style="--bs-bg-opacity: .7;">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5 opacity-bg">
                                 <h1 class="display-1 fw-bold  fst-italic">HOME</h1>
                                 <p class="fs-6 d-xl-none fw-bold fst-italic">Welcome here you will find all your
                                     movements of past and future events</p>
@@ -112,8 +108,7 @@
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_4.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
-                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
-                                style="--bs-bg-opacity: .7;">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5 opacity-bg">
                                 <h1 class="display-1 fw-bold  fst-italic">HOME</h1>
                                 <p class="fs-6 d-xl-none fw-bold fst-italic">Welcome here you will find all your
                                     movements of past and future events</p>
@@ -140,60 +135,23 @@
         <div class="mb-5">
             <div class="d-flex justify-content-around  align-items-center flex-wrap mt-5 ms-4">
 
-                <div class=" fs-5 mb-2">
-                    <div class="form-check form-check-inline ">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox1"
-                            value="foodFair">
-                        <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-                    </div>
-                    <div class="form-check form-check-inline ">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox2"
-                            value="museun">
-                        <label class="form-check-label" for="inlineCheckbox2">Museum</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox3"
-                            value="costumeParty">
-                        <label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox4"
-                            value="musicConcert">
-                        <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox5"
-                            value="race">
-                        <label class="form-check-label" for="inlineCheckbox5">Race</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox6"
-                            value="bookExchange">
-                        <label class="form-check-label" for="inlineCheckbox6">Book Exchange</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary " type="checkbox" id="inlineCheckbox7"
-                            value="goTheCinema">
-                        <label class="form-check-label" for="inlineCheckbox7">Let's go to the cinema</label>
-                    </div>
+                <div class=" fs-5 mb-2" id="divCheckbox">
                 </div>
 
+
                 <div>
-                    <div>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-1 border border-primary" type="search" placeholder="Search"
-                                aria-label="Search">
-                            <button class="btn btn-outline-primary search " type="submit">Search</button>
-                        </form>
-                    </div>
+                    <form class="d-flex" role="search">
+                        <input id="inputBusquedad" class="form-control me-1 border border-primary" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-primary search " type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </div>
+        
 
         <div class="mt-4">
             <div id="carouselExample" class="carousel slide container-fluid">
                 <div id="carouselPrincipal" class="carousel-inner">
-
 
                 </div>
 
@@ -240,6 +198,7 @@
     </footer>
 
     <script src="./javascript/home.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
