--- a/pastEvents.html
+++ b/pastEvents.html
@@ -141,52 +141,16 @@
         <div class="mb-5">
             <div class="d-flex justify-content-around  align-items-center flex-wrap mt-5 ms-4">
 
-                <div class=" fs-5 mb-2">
-                    <div class="form-check form-check-inline ">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox1"
-                            value="foodFair">
-                        <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-                    </div>
-                    <div class="form-check form-check-inline ">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox2"
-                            value="museun">
-                        <label class="form-check-label" for="inlineCheckbox2">Museum</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox3"
-                            value="costumeParty">
-                        <label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox4"
-                            value="musicConcert">
-                        <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox5"
-                            value="race">
-                        <label class="form-check-label" for="inlineCheckbox5">Race</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary" type="checkbox" id="inlineCheckbox6"
-                            value="bookExchange">
-                        <label class="form-check-label" for="inlineCheckbox6">Book Exchange</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input border border-primary " type="checkbox" id="inlineCheckbox7"
-                            value="goTheCinema">
-                        <label class="form-check-label" for="inlineCheckbox7">Let's go to the cinema</label>
-                    </div>
+                <div class=" fs-5 mb-2" id="divCheckbox">
                 </div>
 
+
                 <div>
-                    <div>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-1 border border-primary" type="search" placeholder="Search"
-                                aria-label="Search">
-                            <button class="btn btn-outline-primary search " type="submit">Search</button>
-                        </form>
-                    </div>
+                    <form class="d-flex" role="search">
+                        <input id="inputBusquedad" class="form-control me-1 border border-primary" type="search" placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-outline-primary search " type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </div>
