--- a/stats.html
+++ b/stats.html
@@ -148,56 +148,9 @@
 
         <div class="mt-5 ms-5 me-5 pb-5 table-responsive">
             <table class="table table-bordered border-black table-hover">
-                <tbody>
-                    <tr>
-                        <th class="bg-secondary" colspan="3">Events Statistics</th>
-                    </tr>
-                    <tr>
-                        <td class="col-4 ">Events with highest % of assistance</td>
-                        <td class="col-4">Events whit lowest % of assistance</td>
-                        <td class="col-4">Events whit larger capacity</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th class="bg-secondary" colspan="3">Upcoming events statistics by category</th>
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of assistance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th class="bg-secondary" colspan="3">Past Events statistics by category</th>
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of assistance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
+                <tbody id="crearTr">
+
+
                 </tbody>
             </table>
         </div>
@@ -231,7 +184,9 @@
 
 
     </footer>
-
+    <script src="./modulos/funciones.js" type="module"></script>
+    <script src="./modulos/variables.js" type="module"></script>
+    <script src="./javascript/stats.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
